# HealthDapp_Azero

./: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
contracts/: HealthRecords.sol  hardhat.config.ts  package.json
contracts/contracts/: Cargo.toml
contracts/contracts/access_control/: Cargo.toml  lib.rs
contracts/contracts/ai_manager/: Cargo.toml  lib.rs
contracts/contracts/appointment_manager/: AppointmentManager.sol  AppointmentNFT.sol  deploy.ts
contracts/contracts/health_records/: Cargo.toml  lib.rs
contracts/contracts/zero_knowledge/: Cargo.toml  lib.rs
pinata-server/: .dev.vars
pinata-server/pinata-server/: package-lock.json  package.json  wrangler.jsonc
pinata-server/pinata-server/src/: index.ts
src/: App.tsx  index.css
src/abi/: MedicalFileVaultABI.json
src/components/: AIPredictor.tsx  AccessControl.tsx  Appointments.tsx  BlockchainRecords.tsx  Check.tsx  Dashboard.tsx  Header.tsx  IdentityManagement.tsx  KeyManagement.tsx  Layout.tsx  MyDoctors.tsx  MyRecords.tsx  NotificationCard.tsx  PatientRecords.tsx  Profile.tsx  Security.tsx  Sidebar.tsx  StatsCard.tsx  WalletConnector.tsx  ZeroKnowledge.tsx  _app.tsx  appointment.tsx  my-doctors.tsx  walletConnectiors.tsx
src/components/ui/: notification.tsx
src/pages/: Index.tsx  Login.tsx
src/services/: AppointmentService.ts
src/types/: ethereum.d.ts  global.d.ts
src/utils/: uploadToContract.ts
