[package]
name = "health_records"  # or other contract name
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aleph-zero-contracts = { git = "https://github.com/aleph-zero/aleph-zero-contracts", branch = "master" }
aleph-zero-zkp = { git = "https://github.com/aleph-zero/aleph-zero-zkp", branch = "master" }
scale = "5.0"
scale-info = "2.0"
ink = "4.0"
ink-env = "4.0"
ink-storage = "4.0"
ink-primitives = "4.0"
ink-as-dependency = "4.0"